--- a/src/main/resources/templates/subject/addSubject.html
+++ b/src/main/resources/templates/subject/addSubject.html
@@ -1,77 +1,140 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--&lt;!&ndash;Styles, meta data, and title are included&ndash;&gt;-->
+<!--<head data-th-replace="~{fragments/header :: headerFragment}">-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Thymeleaf Springboot </title>-->
+<!--</head>-->
+<!--<body>-->
+<!--&lt;!&ndash;Nav bar is included&ndash;&gt;-->
+<!--<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>-->
+
+<!--<div class="bg-secondary">-->
+<!--    <div class="col-4"></div>-->
+<!--    <div class="col-4">-->
+<!--        <h1>Subject Management - Add New Subject</h1>-->
+<!--    </div>-->
+<!--    <div class="col-4">-->
+<!--        <a href="/subject">-->
+<!--            <button class="btn btn-primary">All Subject</button>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="container">-->
+<!--    <form action="/subject/save" data-th-object="${subject}" method="post">-->
+<!--        &lt;!&ndash;subject id&ndash;&gt;-->
+<!--        <div class="form-row text-right" data-th-if="${addStatus==false}">-->
+<!--            <div class="col-md-4">-->
+<!--                <label data-th-for="${id}">Id</label>-->
+<!--            </div>-->
+<!--            <div class="col-md-8">-->
+<!--                <label>-->
+<!--                    <input class="form-control" data-th-field="*{id}" readonly type="text">-->
+<!--                </label>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Name&ndash;&gt;-->
+<!--        <div class="form-row text-right">-->
+<!--            <div class="col-md-4">-->
+<!--                <label class="control-label" data-th-for="${name}">Name :</label>-->
+<!--            </div>-->
+<!--            <div class="col-md-8">-->
+<!--                <label>-->
+<!--                    <input class="form-control" data-th-field="*{name}" required tabindex="4" type="text"/>-->
+<!--                </label>-->
+<!--                <span data-th-errors="*{name}"-->
+<!--                      data-th-if="${#fields.hasErrors('name')}">Error Name</span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash;Code&ndash;&gt;-->
+<!--        <div class="form-row text-right">-->
+<!--            <div class="col-md-4">-->
+<!--                <label class="control-label" data-th-for="${code}">code :</label>-->
+<!--            </div>-->
+<!--            <div class="col-md-8">-->
+<!--                <input class="form-control" data-th-field="*{code}" required tabindex="4" type="text"/>-->
+<!--                <span data-th-errors="*{code}"-->
+<!--                      data-th-if="${#fields.hasErrors('code')}">Error Name</span>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash;Button&ndash;&gt;-->
+<!--        <div class="container-fluid">-->
+<!--            <button class="btn btn-success" tabindex="21" type="submit">-->
+<!--                <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span-->
+<!--                    data-th-text="${addStatus==true?'Save': 'Update'}"-->
+<!--                    id="submit"></span>-->
+<!--            </button>-->
+<!--        </div>-->
+<!--    </form>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;footer is included&ndash;&gt;-->
+<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--&lt;!&ndash;script is included&ndash;&gt;-->
+<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Student Management system</title>
 </head>
 <body>
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="bg-secondary">
-    <div class="col-4"></div>
+<div class="row bg-light">
     <div class="col-4">
-        <h1>Subject Management - Add New Subject</h1>
+    </div>
+    <div class="col-4">
+        <h1>Add new Subject</h1>
     </div>
     <div class="col-4">
         <a href="/subject">
-            <button class="btn btn-primary">All Subject</button>
+            <button class="btn btn-primary">View all Subjects</button>
         </a>
     </div>
 </div>
+
 <div class="container">
     <form action="/subject/save" data-th-object="${subject}" method="post">
-        <!--subject id-->
-        <div class="form-row text-right" data-th-if="${addStatus==false}">
-            <div class="col-md-4">
-                <label data-th-for="${id}">Id</label>
-            </div>
-            <div class="col-md-8">
-                <label>
-                    <input class="form-control" data-th-field="*{id}" readonly type="text">
-                </label>
-            </div>
-        </div>
-        <!-- Name-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${name}">Name :</label>
-            </div>
-            <div class="col-md-8">
-                <label>
-                    <input class="form-control" data-th-field="*{name}" required tabindex="4" type="text"/>
-                </label>
-                <span data-th-errors="*{name}"
-                      data-th-if="${#fields.hasErrors('name')}">Error Name</span>
+<!--        <div class="form-group">-->
+<!--            <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>-->
+<!--            <div class="col-sm-9">-->
+<!--                <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus>-->
+<!--            </div>-->
+<!--        </div>-->
+        <div class="form-group">
+            <label class="col-sm-2 control-label" data-th-for="${name}">Subject Name</label>
+            <div class="col-sm-5">
+                <input type="text" id="name" class="form-control" data-th-field="*{name}" placeholder="Subject name">
             </div>
         </div>
-        <!--Code-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${code}">code :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{code}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{code}"
-                      data-th-if="${#fields.hasErrors('code')}">Error Name</span>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" data-th-for="${code}">Subject code</label>
+            <div class="col-sm-4">
+                <input type="text" id="code" placeholder="Subject Code" class="form-control" data-th-field="*{code}">
             </div>
         </div>
+        <div class="row container-fluid">
+            <div class="col-sm-2 col-sm-offset-2">
+                <button type="link" class="btn btn-danger btn-block">Back</button>
+            </div>
 
-        <!--Button-->
-        <div class="container-fluid">
-            <button class="btn btn-success" tabindex="21" type="submit">
-                <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span
-                    data-th-text="${addStatus==true?'Save': 'Update'}"
-                    id="submit"></span>
-            </button>
+            <div class="col-sm-2 col-sm-offset-2">
+                <button type="reset" class="btn btn-warning btn-block">Clear Data</button>
+            </div>
+
+            <div class="col-sm-2 col-sm-offset-2">
+                <button type="submit" class="btn btn-success btn-block">Submit</button>
+            </div>
         </div>
     </form>
 </div>
-
-<!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
-<!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
 </body>
 </html>
