--- a/src/main/resources/templates/subject/subject.html
+++ b/src/main/resources/templates/subject/subject.html
@@ -1,66 +1,127 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--&lt;!&ndash;Styles, meta data, and title are included&ndash;&gt;-->
+<!--<head data-th-replace="~{fragments/header :: headerFragment}">-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Thymeleaf Springboot </title>-->
+<!--</head>-->
+<!--<body>-->
+<!--&lt;!&ndash;Nav bar is included&ndash;&gt;-->
+<!--<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>-->
+
+
+
+<!--    <nav class="navbar navbar-expand-sm bg-primary">-->
+<!--        <div class="col-4"></div>-->
+<!--        <div class="col-4">-->
+<!--          <h1><span class="navbar-text">Subject Management</span></h1>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <a href="/subject/new">-->
+<!--                <button class="btn btn-primary">New Subject</button>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </nav>-->
+
+<!--<div class="container">-->
+<!--    <div class="col-3>"></div>-->
+<!--    <div class="col-6">-->
+<!--        <h2>Striped Rows</h2>-->
+<!--        <table class="table table-striped">-->
+<!--            <thead class="thead-inverse">-->
+<!--            <tr>-->
+<!--                <th>Index</th>-->
+<!--                <th>Name</th>-->
+<!--                <th>Code</th>-->
+<!--                <th>Modify</th>-->
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr data-th-each="subject, index : ${subjects}">-->
+<!--                <td data-th-text="${index.count}"></td>-->
+<!--                <td data-th-text="${subject.name}"></td>-->
+<!--                <td data-th-text="${subject.code}"></td>-->
+<!--                <td>-->
+<!--                    <a data-th-href="${'/subject/view/'+ subject.id}"><button class="btn btn-info">View</button></a>-->
+<!--                    <a data-th-href="${'/subject/edit/'+ subject.id}"><button class="btn btn-success">Edit</button></a>-->
+<!--                    <a data-th-href="${'/subject/delete/'+ subject.id}"><button class="btn btn-danger">Delete</button></a>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--        </table>-->
+<!--    </div>-->
+<!--    <div class="col-3"></div>-->
+
+<!--</div>-->
+
+
+
+<!--&lt;!&ndash;-->
+<!--<div class="container-fluid">-->
+<!--    <div class="col-3>"></div>-->
+<!--    <div class="col-6">-->
+<!--        <table class="table table-striped table-inverse table-responsive" id="myTable">-->
+<!--            <thead class="thead-inverse">-->
+<!--            <tr>-->
+<!--                <th>Index</th>-->
+<!--                <th>Name</th>-->
+<!--                <th>Code</th>-->
+<!--                <th>Modify</th>-->
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr data-th-each="subject, index : ${subjects}">-->
+<!--                <td data-th-text="${index.count}"></td>-->
+<!--                <td data-th-text="${subject.name}"></td>-->
+<!--                <td data-th-text="${subject.code}"></td>-->
+<!--                <td>-->
+<!--                    <a data-th-href="${'/subject/view/'+ subject.id}"><button class="btn btn-info">View</button></a>-->
+<!--                    <a data-th-href="${'/subject/edit/'+ subject.id}"><button class="btn btn-success">Edit</button></a>-->
+<!--                    <a data-th-href="${'/subject/delete/'+ subject.id}"><button class="btn btn-danger">Delete</button></a>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--        </table>-->
+<!--    </div>-->
+<!--    <div class="col-3"></div>-->
+<!--</div>&ndash;&gt;-->
+
+
+<!--&lt;!&ndash;footer is included&ndash;&gt;-->
+<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--&lt;!&ndash;script is included&ndash;&gt;-->
+<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></>-->
+<!--</body>-->
+<!--</html>-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Student Management System</title>
 </head>
 <body>
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-
-
-    <nav class="navbar navbar-expand-sm bg-primary">
-        <div class="col-4"></div>
-        <div class="col-4">
-          <h1><span class="navbar-text">Subject Management</span></h1>
-        </div>
-        <div class="col-4">
-            <a href="/subject/new">
-                <button class="btn btn-primary">New Subject</button>
-            </a>
-        </div>
-    </nav>
-
-<div class="container">
-    <div class="col-3>"></div>
-    <div class="col-6">
-        <h2>Striped Rows</h2>
-        <table class="table table-striped">
-            <thead class="thead-inverse">
-            <tr>
-                <th>Index</th>
-                <th>Name</th>
-                <th>Code</th>
-                <th>Modify</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr data-th-each="subject, index : ${subjects}">
-                <td data-th-text="${index.count}"></td>
-                <td data-th-text="${subject.name}"></td>
-                <td data-th-text="${subject.code}"></td>
-                <td>
-                    <a data-th-href="${'/subject/view/'+ subject.id}"><button class="btn btn-info">View</button></a>
-                    <a data-th-href="${'/subject/edit/'+ subject.id}"><button class="btn btn-success">Edit</button></a>
-                    <a data-th-href="${'/subject/delete/'+ subject.id}"><button class="btn btn-danger">Delete</button></a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+<div class="row bg-light">
+    <div class="col-4"></div>
+    <div class="col-4">
+        <h1>Subject Management</h1>
     </div>
-    <div class="col-3"></div>
-
+    <div class="col-4"> <a href="/subject/new">
+        <button class="btn btn-primary">Add a Subject</button>
+    </a></div>
 </div>
 
-
-
-<!--
-<div class="container-fluid">
-    <div class="col-3>"></div>
-    <div class="col-6">
-        <table class="table table-striped table-inverse table-responsive" id="myTable">
+<div class="container-fluid row">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-10">
+        <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
             <thead class="thead-inverse">
             <tr>
                 <th>Index</th>
@@ -83,13 +144,12 @@
             </tbody>
         </table>
     </div>
-    <div class="col-3"></div>
-</div>-->
-
+    <div class="col-lg-1"></div>
+</div>
 
 <!--footer is included-->
 <footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></>
+<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
 </body>
 </html>
