--- a/src/main/resources/templates/school/addSchool.html
+++ b/src/main/resources/templates/school/addSchool.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Student Management system</title>
+    <title>Success Student Management</title>
 </head>
 <body>
 <!--Nav bar is included-->
@@ -14,7 +13,7 @@
     <div class="col-4">
     </div>
     <div class="col-4">
-        <h1>Add a School</h1>
+        <h1>Add new School</h1>
     </div>
     <div class="col-4">
         <a href="/school">
@@ -25,22 +24,35 @@
 
 <div class="container">
     <form action="/school/save" data-th-object="${school}" method="post">
-<!--        <div class="form-group">-->
-<!--            <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>-->
-<!--            <div class="col-sm-9">-->
-<!--                <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus>-->
-<!--            </div>-->
-<!--        </div>-->
         <div class="form-group">
-            <label class="col-sm-2 control-label" data-th-for="${schoolId}">School ID</label>
-            <div class="col-sm-4">
-                <input type="text" id="code" placeholder="School ID" class="form-control" data-th-field="*{schoolId}">
+            <label class="col-sm-3 control-label" data-th-for="${schoolId}">School ID</label>
+            <div class="col-sm-9">
+                <input type="text" data-th-field="*{schoolId}" id="schoolId" placeholder="School Code" class="form-control" autofocus>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label" data-th-for="${name}">School name</label>
+            <label class="col-sm-2 control-label" data-th-for="${schoolName}">School Name</label>
             <div class="col-sm-5">
-                <input type="text" id="name" class="form-control" data-th-field="*{name}" placeholder="School name">
+                <input type="text" id="schoolName" class="form-control" data-th-field="*{schoolName}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" data-th-for="${district}">District</label>
+            <div class="col-sm-5">
+                <select id="district" class="form-control" data-th-field="*{district}">
+                    <option value="1">Teacher Referred</option>
+                    <option value="2">Academic Referred</option>
+                    <option value="3">Special Promotion</option>
+                    <option value="4">First month Free</option>
+                    <option value="5">Teacher Referred</option>
+                    <option value="6">Academic Referred</option>
+                    <option value="7">Special Promotion</option>
+                    <option value="8">First month Free</option>
+                    <option value="9">Teacher Referred</option>
+                    <option value="10">Academic Referred</option>
+                    <option value="11">Special Promotion</option>
+                    <option value="12">First month Free</option>
+                </select>
             </div>
         </div>
         <div class="row container-fluid">
@@ -56,7 +68,7 @@
                 <button type="submit" class="btn btn-success btn-block">Submit</button>
             </div>
         </div>
-    </form>
+    </form> <!-- /form -->
 </div>
 </body>
 </html>
